--- a/examples/ens210thingspeak/thingspeak-fullscreen-multi.html
+++ b/examples/ens210thingspeak/thingspeak-fullscreen-multi.html
@@ -1,48 +1,61 @@
 <HTML>
   <HEAD>
     <STYLE>
-      IFRAME { margin:0; padding:0; position: absolute; border:1px #c0c0c0 solid; }
+      IFRAME { margin:0; padding:0; position:absolute; border:1px #c0c0c0 solid; }
+      SPAN   { margin:0; padding:0; position:absolute; border:1px #c0c0c0 solid; }
+      A      { text-decoration:none; color:inherit; }
     </STYLE>
     <SCRIPT>
+    // User configurable fields are tagged with "[may be changed]"
     function addIFrame(channel,field,color) {
       var iframe = document.createElement("IFRAME");
       // The onResize() will set the iframe 'src' from 'orgsrc' while appending width and height
-      iframe.orgsrc = "https://thingspeak.com/channels/"+channel+"/charts/"+field+"?color=%23"+color+"&dynamic=true&results=1000"
+      iframe.orgsrc = "https://thingspeak.com/channels/"+channel+"/charts/"+field+"?color=%23"+color+"&dynamic=true&results=1000";
+      // Add iframe to body
       document.body.appendChild(iframe);
+      // Add zoom button to iframe
+      var zoom = document.createElement("SPAN");
+      zoom.innerHTML= "<a href='"+iframe.orgsrc+"&width=1900&height=900'>&nbsp;↖&nbsp;</a>";
+      document.body.appendChild(zoom);
+      iframe.zoom= zoom;
     }
     function onLoad() {
       // Call addIFrame with (1) ThingSpeak channel number, (2) ThingSpeak field number, (3) desired graph color. All params are strings. [may be changed]
-      // Color hint: red="d62020" (ThingSpeak default), blue="4189f4", yellow="f4d442", green="249600"
-      addIFrame("249563","2","f4d442");
-      addIFrame("320672","1","249600");
-      addIFrame("249563","1","f4d442");
-      addIFrame("320672","2","249600");
+      // Color hint: red="d62020" (ThingSpeak default), blue="4189f4", yellow="f4d442", green="249600", amsgrey="46555f"
+      addIFrame("249563","2","f4d442"); // ENS210.H
+      addIFrame("320672","1","249600"); // ENS220.P
+      addIFrame("249563","1","f4d442"); // ENS210.T
+      // addIFrame("320672","2","249600"); // ENS220.T
+      addIFrame("381884","1","46555f"); // iAQcore.CO2
       // Set page title (although page is supposed to be shown 'full screen'/F11) [may be changed]
-      document.title = "Humidity and pressure @ HTC"
+      document.title = "ENS sensors @ HTC"
       // Force iframes to correct size
       onResize();
     }
     function onResize() {
-      var ww = window.innerWidth; // ww,wh = window width,height
-      var wh = window.innerHeight;
-      var xw = 24; // xw,xh = "extra" width,height (total margin of all iframes) [may be changed]
-      var xh = 24;
+      var wx = window.innerWidth; // wx,wy = window size in x and y direction (width,height)
+      var wy = window.innerHeight;
+      var xx = 24; // xx,xy = "extra" spacing (total margins of all iframes) in x and y direction [may be changed]
+      var xy = 24;
       var iframes = document.getElementsByTagName("IFRAME");
       var count= iframes.length
       var cols= count<4 ? 1: 2; // cols,rows = iframe grid size [may be changed]
       var rows= Math.ceil(count/cols);
-      var iw = Math.trunc((ww-xw)/cols); // iw,ih = iframe width,height
-      var ih = Math.trunc((wh-xh)/rows);
-      var sw = (ww-cols*iw)/(1+cols); // sw,sh = inter iframe spacing in width,height
-      var sh = (wh-rows*ih)/(1+rows);
+      var ix = Math.trunc((wx-xx)/cols); // ix,iy = iframe size in x and y direction (width,height)
+      var iy = Math.trunc((wy-xy)/rows);
+      var sx = (wx-cols*ix)/(1+cols); // sx,sy = spacing between iframes (start, between, end) in x and y direction
+      var sy = (wy-rows*iy)/(1+rows);
       for(var y=0; y<rows; y++) {
         for(var x=0; x<cols; x++ ) {
           var i=x+y*cols;
-          iframes[i].width = iw;
-          iframes[i].height = ih;
-          iframes[i].style.left = x*iw + sw*(x+1);
-          iframes[i].style.top = y*ih + sh*(y+1);
-          iframes[i].src = iframes[i].orgsrc+"&width="+iw+"&height="+ih
+          iframes[i].width = ix;
+          iframes[i].height = iy;
+          iframes[i].style.left = x*ix + sx*(x+1);
+          iframes[i].style.top = y*iy + sy*(y+1);
+          iframes[i].src = iframes[i].orgsrc+"&width="+ix+"&height="+iy;
+          // Position the zoom button
+          iframes[i].zoom.style.left=iframes[i].style.left;
+          iframes[i].zoom.style.top=iframes[i].style.top;
         }
         // document.title = "w="+w+", h="+h;
       }
